--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,14 @@ dependencies {
     compile "log4j:log4j:1.2.17"
     compile "org.springframework:spring-webmvc:4.2.0.RELEASE"
     compile "org.codehaus.jackson:jackson-mapper-asl:1.9.0"
+    compile "com.fasterxml.jackson.core:jackson-databind:2.6.1"
 }
 
 war {
     from 'src/rootContent'
+}
+
+task copyLibs(type: Copy) {
+    from configurations.testRuntime
+    into "src/main/webapp/WEB-INF/lib"
 }
