--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,19 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile "junit:junit:4.9"
     testCompile "org.spockframework:spock-spring:0.7-groovy-2.0"
     compile "log4j:log4j:1.2.17"
+    compile "org.springframework:spring-core:2.5.6"
     compile "org.springframework:spring-webmvc:4.1.7.RELEASE"
     compile "org.codehaus.jackson:jackson-mapper-asl:1.9.0"
     compile "com.fasterxml.jackson.core:jackson-databind:2.6.1"
+    compile "mysql:mysql-connector-java:5.1.36"
+    compile "commons-dbutils:commons-dbutils:1.2"
+    compile "org.springframework:spring-test:2.5"
+    compile "org.springframework:spring-tx:4.2.0.RELEASE"
+    compile "org.hibernate:hibernate-validator:4.2.0.Final"
+
 }
 
 war {
